2019-02-06 Franz Holzinger  <franz@ttproducts.de>
    * new base class: change the Localization class from \JambageCom\Div2007\Base\LocalisationBase to TranslationBase. Change the methods of the $languageObj object accordingly: loadLL => loadLocalLang, getLLkey => getLocalLangKey, getLL => getLabel

2018-11-26 Franz Holzinger  <franz@ttproducts.de>
    * Extract file tt_content.php from ext_tables.php

2018-11-24 Franz Holzinger  <franz@ttproducts.de>
    * Readd file class.tx_agency.php which is needed until TYPO3 7.6 for addPItoST43.

2018-11-13 Franz Holzinger  <franz@ttproducts.de>
    * Fix PHP syntax error

2018-09-25 Franz Holzinger  <franz@ttproducts.de>
    * Please help to fix the wrong translation at: https://translation.typo3.org/de/TYPO3.ext.agency/translate/pi/locallang.xlf#filter=all&unit=4571234 .
    * bugfix for notification emails: The storage page of the plugin has not been considered.
    * feature responsive template: replace several HTML tags by div tags with css classes.

2018-09-05 Franz Holzinger  <franz@ttproducts.de>
    * modify composer.json: use namespace typo3-ter/div2007 instead of jambagecom/div2007

2018-07-18 Franz Holzinger  <franz@ttproducts.de>
    * remove the old template file template/tx_agency_css_tmpl.html. Use the new template file at Resources/Private/Templates/AgencyRegistrationTemplate.html instead of it.

2018-07-12 Franz Holzinger  <franz@ttproducts.de>
    * bugfix for TYPO3 8.7: replace the deprecated $GLOBALS['TSFE']->sys_page->getRecordsByField by  \TYPO3\CMS\Frontend\Page\PageRepository::getRecordsByField

2018-07-12 Franz Holzinger  <franz@ttproducts.de>
    * remove the files:
        ext_autoload.php, hooks/captcha/class.tx_agency_captcha.php, hooks/class.tx_agency_feusergroup_scheduler.php, hooks/class.tx_agency_hooksHandler.php,
        hooks/class.tx_agency_hooks_cms.php, hooks/freecap/class.tx_agency_freecap.php, 