@@ -11,7 +11,7 @@ $EM_CONF[$_EXTKEY] = array(
     'author' => 'Franz Holzinger',
     'author_email' => 'franz@ttproducts.de',
     'author_company' => 'jambage.com',
-    'version' => '0.8.3',
+    'version' => '0.8.4',
     'constraints' => array(
         'depends' => array(
             'php' => '5.5.0-7.99.99',
